can now open  default level

--- a/DDTGameCenter/DDTGameCenter.vcxproj.filters
+++ b/DDTGameCenter/DDTGameCenter.vcxproj.filters
@@ -34,5 +34,8 @@
     <Text Include="level_1.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="level_2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
