--- a/DDTGameCenter/DDTGameCenter.vcxproj
+++ b/DDTGameCenter/DDTGameCenter.vcxproj
@@ -160,7 +160,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="level_1.txt" />
+    <Text Include="level_1.txt">
+      <DeploymentContent>false</DeploymentContent>
+    </Text>
+    <Text Include="level_2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
