--- a/DDTGameCenter/DDTGameCenter.vcxproj
+++ b/DDTGameCenter/DDTGameCenter.vcxproj
@@ -163,7 +163,15 @@
     <Text Include="level_1.txt">
       <DeploymentContent>false</DeploymentContent>
     </Text>
+    <Text Include="level_10.txt" />
     <Text Include="level_2.txt" />
+    <Text Include="level_3.txt" />
+    <Text Include="level_4.txt" />
+    <Text Include="level_5.txt" />
+    <Text Include="level_6.txt" />
+    <Text Include="level_7.txt" />
+    <Text Include="level_8.txt" />
+    <Text Include="level_9.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
